fixed bug on firefox ratings

--- a/project/Frontend/frontend/src/sass/Feed.scss
+++ b/project/Frontend/frontend/src/sass/Feed.scss
@@ -179,6 +179,10 @@
     width:  100%;
     height: 100%;
 
+    tr {
+        height: 100%;
+    }
+
     td {
         // padding: 3px;
         width: 20%;
